--- a/emailbuilder.html
+++ b/emailbuilder.html
@@ -9,21 +9,22 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <!-- Prism.js CSS for syntax highlighting -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/themes/prism.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/themes/prism-tomorrow.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #f8f9fa;
+            background-color: #f5f5f5;
             color: #333333;
             transition: background-color 0.3s, color 0.3s;
+            font-size: 0.9rem;
         }
 
         .dark-theme {
-            background-color: #121212;
+            background-color: #181818;
             color: #e0e0e0;
         }
 
         .container {
-            max-width: 1200px;
+            max-width: 1400px;
             margin-top: 20px;
         }
 
@@ -32,24 +33,30 @@
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
             background-color: #ffffff;
             transition: background-color 0.3s, color 0.3s;
+            margin-bottom: 20px;
+            display: flex;
+            flex-direction: column;
+            height: 100%;
         }
 
         .dark-theme .card {
-            background-color: #1e1e1e;
+            background-color: #222222;
             color: #e0e0e0;
             box-shadow: 0 0 15px rgba(255, 255, 255, 0.1);
         }
 
         .card-header {
-            background-color: #007bff;
+            background-color: #4a4a4a;
             color: #ffffff;
             border-radius: 10px 10px 0 0;
             text-align: center;
             font-weight: bold;
+            font-size: 1rem;
         }
 
         .card-body {
             border-radius: 0 0 10px 10px;
+            flex: 1;
         }
 
         .form-control,
@@ -68,21 +75,23 @@
 
         .form-group label {
             font-weight: bold;
+            font-size: 0.9rem;
         }
 
         .btn-custom {
-            background-color: #007bff;
+            background-color: #4a4a4a;
             color: #ffffff;
             font-weight: bold;
             transition: background-color 0.3s ease;
+            font-size: 0.9rem;
         }
 
         .btn-custom:hover {
-            background-color: #0056b3;
+            background-color: #353535;
         }
 
         .btn.active {
-            background-color: #0056b3;
+            background-color: #353535;
             color: #ffffff;
         }
 
@@ -93,6 +102,7 @@
             background-color: #ffffff;
             transition: background-color 0.3s;
             overflow-x: auto;
+            margin-bottom: 20px;
         }
 
         .dark-theme .iframe-container {
@@ -123,14 +133,29 @@
             border: 1px solid #ced4da;
             overflow-x: auto;
             transition: background-color 0.3s, color 0.3s;
-            white-space: pre-wrap; /* Allow line breaks */
-            word-break: break-all; /* Break long words */
+            white-space: pre-wrap;
+            word-break: break-all;
         }
 
         .dark-theme .code-viewer pre {
             background-color: #2b2b2b;
             color: #e0e0e0;
             border: 1px solid #444444;
+        }
+
+        .form-inline .form-control {
+            width: auto;
+            flex: 1;
+            margin-right: 10px;
+        }
+
+        .form-inline #utmCampaign {
+            flex: 1.5;
+        }
+
+        .form-inline #utmMedium,
+        .form-inline #utmSource {
+            flex: 0.75;
         }
 
         @media (max-width: 768px) {
@@ -145,6 +170,12 @@
             .utm-section {
                 margin-top: 20px;
             }
+
+            .form-inline .form-control {
+                width: 100%;
+                margin-right: 0;
+                margin-bottom: 10px;
+            }
         }
     </style>
 </head>
@@ -156,19 +187,63 @@
             <button class="btn btn-custom" id="themeToggleButton">Toggle Theme</button>
         </div>
 
+        <!-- Tracking Settings & Company Info -->
         <div class="card mb-4">
             <div class="card-header">
-                Email Template Editor
+                Tracking Settings & Company Info
             </div>
             <div class="card-body">
-                <div class="row">
-                    <!-- Email and Button Params -->
-                    <div class="col-md-5">
+                <form class="form-inline" id="trackingForm">
+                    <div class="form-group mr-2">
+                        <label for="utmCampaign" class="sr-only">UTM Campaign:</label>
+                        <input type="text" class="form-control" id="utmCampaign" name="utmCampaign"
+                            placeholder="email name" aria-label="UTM Campaign">
+                    </div>
+
+                    <div class="form-group mr-2">
+                        <label for="utmMedium" class="sr-only">UTM Medium:</label>
+                        <input type="text" class="form-control" id="utmMedium" name="utmMedium" placeholder="email"
+                            aria-label="UTM Medium">
+                    </div>
+
+                    <div class="form-group mr-2">
+                        <label for="utmSource" class="sr-only">UTM Source:</label>
+                        <input type="text" class="form-control" id="utmSource" name="utmSource" placeholder="courier"
+                            aria-label="UTM Source">
+                    </div>
+
+                    <div class="form-group mr-2">
+                        <label for="companyName" class="sr-only">Company Name:</label>
+                        <select class="form-control" id="companyName" name="companyName" aria-label="Company Name">
+                            <option value="NeoAdTech OÜ">NeoAdTech OÜ</option>
+                            <option value="NeoPub OÜ">NeoPub OÜ</option>
+                            <option value="ActiveView Inc.">ActiveView Inc.</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="language" class="sr-only">Language:</label>
+                        <select class="form-control" id="language" name="language" aria-label="Language">
+                            <option value="en">English</option>
+                            <option value="es">Spanish</option>
+                        </select>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        <div class="row d-flex align-items-stretch">
+            <!-- Email and Button Params -->
+            <div class="col-lg-5">
+                <div class="card h-100">
+                    <div class="card-header">
+                        Email Message and Button
+                    </div>
+                    <div class="card-body">
                         <form id="emailForm">
-                            <h5>Email Message</h5>
                             <div class="form-group">
                                 <label for="bodyMessage">Body Message:</label>
-                                <textarea class="form-control" id="bodyMessage" name="bodyMessage" rows="5"
+                                <textarea class="form-control" id="bodyMessage" name="bodyMessage" rows="6"
                                     placeholder="Enter your message here..."><b>Hello {{ contact.firstName }},</b>
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet.</textarea>
@@ -212,16 +287,22 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praes
 
                             <div class="form-group">
                                 <label for="afterCtaMessage">After CTA Message:</label>
-                                <textarea class="form-control" id="afterCtaMessage" name="afterCtaMessage" rows="3"
+                                <textarea class="form-control" id="afterCtaMessage" name="afterCtaMessage" rows="4"
                                     placeholder="Enter your after CTA message here...">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet.</textarea>
                             </div>
                         </form>
                     </div>
+                </div>
+            </div>
 
-                    <!-- Email Preview -->
-                    <div class="col-md-5">
-                        <h5>Email Preview</h5>
-                        <div class="toggle-buttons mb-2">
+            <!-- Email Preview -->
+            <div class="col-lg-7">
+                <div class="card h-100">
+                    <div class="card-header">
+                        Email Preview
+                    </div>
+                    <div class="card-body">
+                        <div class="toggle-buttons mb-3">
                             <button class="btn btn-custom" id="desktopViewButton" onclick="setPreviewMode('desktop')">
                                 <i class="bi bi-display"></i> Desktop View
                             </button>
@@ -234,55 +315,11 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praes
                             <iframe id="previewContainer"></iframe>
                         </div>
                     </div>
-
-                    <!-- UTM Inputs and Company Info -->
-                    <div class="col-md-2">
-                        <h5>Tracking Settings</h5>
-                        <form>
-                            <div class="form-group">
-                                <label for="utmCampaign">UTM Campaign:</label>
-                                <input type="text" class="form-control" id="utmCampaign" name="utmCampaign"
-                                    placeholder="email name">
-                            </div>
-
-                            <div class="form-group">
-                                <label for="utmMedium">UTM Medium:</label>
-                                <input type="text" class="form-control" id="utmMedium" name="utmMedium"
-                                    placeholder="email">
-                            </div>
-
-                            <div class="form-group">
-                                <label for="utmSource">UTM Source:</label>
-                                <input type="text" class="form-control" id="utmSource" name="utmSource"
-                                    placeholder="courier">
-                            </div>
-                        </form>
-
-                        <h5>Company & Language</h5>
-                        <form>
-                            <div class="form-group">
-                                <label for="companyName">Company Name:</label>
-                                <select class="form-control" id="companyName" name="companyName">
-                                    <option value="NeoAdTech OÜ">NeoAdTech OÜ</option>
-                                    <option value="NeoPub OÜ">NeoPub OÜ</option>
-                                    <option value="ActiveView Inc.">ActiveView Inc.</option>
-                                </select>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="language">Language:</label>
-                                <select class="form-control" id="language" name="language">
-                                    <option value="en">English</option>
-                                    <option value="es">Spanish</option>
-                                </select>
-                            </div>
-                        </form>
-                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="card">
+        <div class="card mt-3">
             <div class="card-header">
                 HTML Code
             </div>
@@ -304,7 +341,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praes
     <script>
         // Update the preview and HTML code whenever any input changes
         document.getElementById('emailForm').addEventListener('input', updatePreview);
-        document.querySelectorAll('.utm-section input, .utm-section select').forEach(input => input.addEventListener('input', updatePreview));
+        document.getElementById('trackingForm').addEventListener('input', updatePreview);
 
         function updatePreview() {
             const buttonColor = document.getElementById('buttonColor').value;
