--- a/emailbuilder.html
+++ b/emailbuilder.html
@@ -28,6 +28,34 @@
             margin-top: 20px;
         }
 
+        .navbar {
+            background-color: #000000;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            padding: 0rem 0rem;
+            font-weight: bold;
+            font-size: 1rem;
+        }
+
+        .dark-theme .navbar {
+            background-color: #222222;
+        }
+
+        .navbar-brand,
+        .navbar-nav .nav-link {
+            color: #ffffff;
+            transition: color 0.3s;
+        }
+
+        .dark-theme .navbar-brand,
+        .dark-theme .navbar-nav .nav-link {
+            color: #e0e0e0;
+        }
+
+        .navbar-brand:hover,
+        .navbar-nav .nav-link:hover {
+            color: #cccccc;
+        }
+
         .card {
             border-radius: 10px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
@@ -182,11 +210,32 @@
 
 <body>
 
-    <div class="container">
-        <div class="d-flex justify-content-end mb-2">
-            <button class="btn btn-custom" id="themeToggleButton">Toggle Theme</button>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><i class="bi bi-house-door-fill"></i></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <span class="navbar-text" style="font-size: 1.1rem; color: #ffffff;">Email HTML Builder</span>
+                    </li>
+                </ul>
+            </div>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#" id="themeToggleButton">
+                        <i class="bi bi-moon"></i>
+                    </a>
+                </li>
+            </ul>
         </div>
+    </nav>
 
+    <div class="container">
         <!-- Tracking Settings & Company Info -->
         <div class="card mb-4">
             <div class="card-header">
@@ -491,6 +540,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praes
             document.querySelectorAll('.card').forEach(card => card.classList.toggle('dark-theme'));
             document.querySelectorAll('.iframe-container').forEach(container => container.classList.toggle('dark-theme'));
             document.querySelectorAll('.code-viewer pre').forEach(pre => pre.classList.toggle('dark-theme'));
+            document.querySelectorAll('.navbar').forEach(navbar => navbar.classList.toggle('dark-theme'));
         });
 
         // Initial preview on page load
