--- a/emailbuilder.html
+++ b/emailbuilder.html
@@ -213,7 +213,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><i class="bi bi-house-door-fill"></i></a>
+            <a class="navbar-brand" href="https://kirkbardini.github.io/emailbuilder/emailbuilder.html"><i class="bi bi-house-door-fill"></i></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
