--- a/emailbuilder.html
+++ b/emailbuilder.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Email Template Editor</title>
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="path/to/your/favicon.png" />
+    <link rel="icon" type="image/png" href="favicon.png" />
     <!-- Bootstrap CSS and Icons -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
