added unsub input and dynamic html code update

--- a/emailbuilder.html
+++ b/emailbuilder.html
@@ -44,7 +44,7 @@
     </nav>
 
     <div class="container">
-            <!-- Tracking Settings & Company Info -->
+        <!-- Tracking Settings & Company Info -->
         <div class="card mb-4">
             <div class="card-header">
                 Tracking Settings & Company Info
@@ -81,7 +81,11 @@
                                 <option value="es">Spanish</option>
                             </select>
                         </div>
-                    </div>
+                        <div class="form-group col-md-4">
+                            <label for="unsubscribeLink">Unsubscribe Link:</label>
+                            <input type="url" class="form-control" id="unsubscribeLink" name="unsubscribeLink" placeholder="%UNSUBSCRIBELINK%" aria-label="Unsubscribe Link">
+                        </div>
+                    </div>                    
                 </form>
             </div>
         </div>
