--- a/emailbuilder.html
+++ b/emailbuilder.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Email Template Editor</title>
+    <title>Email HTML Builder</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
     <!-- Bootstrap CSS and Icons -->
