--- a/emailbuilder.html
+++ b/emailbuilder.html
@@ -108,6 +108,14 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praes
                             </div>
 
                             <div class="form-group">
+                                <label for="bodyMessageAlignment">Body Message Alignment:</label>
+                                <select class="form-control" id="bodyMessageAlignment" name="bodyMessageAlignment">
+                                    <option value="left">Left</option>
+                                    <option value="center">Center</option>
+                                </select>
+                            </div>
+                            
+                            <div class="form-group">
                                 <label for="buttonText">Button Text:</label>
                                 <input type="text" class="form-control" id="buttonText" name="buttonText"
                                     value="Button Text" required>
