--- a/emailbuilder.html
+++ b/emailbuilder.html
@@ -156,6 +156,15 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praes
                                 <textarea class="form-control" id="afterCtaMessage" name="afterCtaMessage" rows="4"
                                     placeholder="Enter your after CTA message here...">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet.</textarea>
                             </div>
+
+                            <div class="form-group">
+                                <label for="afterCtaMessageAlignment">After CTA Message Alignment:</label>
+                                <select class="form-control" id="afterCtaMessageAlignment" name="afterCtaMessageAlignment">
+                                    <option value="left">Left</option>
+                                    <option value="center">Center</option>
+                                </select>
+                            </div>
+                            
                         </form>
                     </div>
                 </div>
