button font size customization

--- a/emailbuilder.html
+++ b/emailbuilder.html
@@ -135,6 +135,10 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praes
                                         <input type="color" class="form-control" id="buttonTextColor"
                                             name="buttonTextColor" value="#FFFFFF">
                                     </div>
+                                    <div class="col">
+                                        <label for="buttonFontSize">Button Font Size:</label>
+                                        <input type="number" class="form-control" id="buttonFontSize" name="buttonFontSize" value="24" min="10" max="50" step="1">
+                                    </div>
                                 </div>
 
                                 <div class="form-row mt-2">
