changed ternary operator to dictionary for unsubscribe message and also added german option

--- a/emailbuilder.html
+++ b/emailbuilder.html
@@ -79,6 +79,7 @@
                             <select class="form-control" id="language" name="language" aria-label="Language">
                                 <option value="en">English</option>
                                 <option value="es">Spanish</option>
+                                <option value="de">German</option>
                             </select>
                         </div>
                         <div class="form-group col-md-5">
