fixed unsubscribe link parser

--- a/emailbuilder.html
+++ b/emailbuilder.html
@@ -84,7 +84,7 @@
                         </div>
                         <div class="form-group col-md-5">
                             <label for="unsubscribeLink">Unsubscribe Link:</label>
-                            <input type="url" class="form-control" id="unsubscribeLink" name="unsubscribeLink" placeholder="%UNSUBSCRIBELINK%" aria-label="Unsubscribe Link">
+                            <input type="url" class="form-control" id="unsubscribeLink" name="unsubscribeLink" placeholder="{{ unsubscribe }}" aria-label="Unsubscribe Link">
                         </div>
                     </div>                    
                 </form>
