added italian language

--- a/emailbuilder.html
+++ b/emailbuilder.html
@@ -80,6 +80,7 @@
                                 <option value="en">English</option>
                                 <option value="es">Spanish</option>
                                 <option value="de">German</option>
+                                <option value="it">Italian</option>
                             </select>
                         </div>
                         <div class="form-group col-md-5">
