--- a/emailbuilder.html
+++ b/emailbuilder.html
@@ -81,6 +81,7 @@
                                 <option value="es">Spanish</option>
                                 <option value="de">German</option>
                                 <option value="it">Italian</option>
+                                <option value="fr">French</option>
                             </select>
                         </div>
                         <div class="form-group col-md-5">
